...
    private func handleOnUserAuthentication(from presenter: LoginPresenter?) {
        presenter?.userAuthenCallback = { result, message in
            if result {
                // navigate to main view controller
            } else {
                let alert = UIAlertController(
                    title: "Error",
                    message: message,
                    preferredStyle: UIAlertControllerStyle.alert)
                alert.addAction(
                    UIAlertAction(
                        title: "OK",
                        style: .default,
                        handler: nil)
                )
                self.present(alert, animated: true, completion: nil)
            }
        }
...
